5.4.2

NEW
    - Barbershop skin
    - HUD Settings: "Apply UI scale to all scaleable frames"

FIXES
    - Bug fixes for raidcontrol frame

5.4.1

NEW
    - Added Maelstrom classpowerbar (shaman)

FIXES
    - Spec spellbooktab is now only with a spec available
    - Fix some lua errors
    - Set default quest tracker into top right corner

5.4.0
    Update for Shadowlands Pre-Patch

    Note: Quest Tracker is disabled for now, need a complete rework

NEW
    - Sizer for Heropanel
    - Redo "Move HUD" mode:
        - Frame are now moving with there movers
        - Added new frames
        - Added "Little Settings Window": Right click a mover to see extra options for that frame (atm only scaling)
    - Now you can collaps Addons in the currency tab
    - Export and import Profiles
    - Added a short install process

FIXES
    - Fix target dropdown menu
    - Fix many more bugs


5.3.5-hotfix

FIXES
    - Fix error while dead
    

5.3.5

NEW
    - Make bottom left and right multibar moveable
    - Make Talking Head Frame moveable
    - Added custom and moveable class totems
    - Added player and mouse coordinates to Worldmap
    - Added Inbox skin
    

5.3.4

FIXES
    - Fix lua error if enter an invalid player de/buff size
    - Fix petbar auto moving in default position


5.3.3

NEW
    - Added option to change player buff and debuff size
    - Fix error in afk mode

5.3.2

FIXES
    - Fixed "Show Player in Groupframes"
    - Fixed Alertframe issue
    - Fix lua error in actionbar settings


5.3.1

NEW
    - Added option "Show Player in Groupframes"
    - Make Alertframe moveable

FIXES
    - Fix riadframes not shown


5.3.0

NEW
    - World marker placement keybinds added to 'GW2 UI' section of default bindings UI
    - Added Corrupted Memento to scenario tracker in heroic vision
    - Added "Alert-System" (Module)
    - Rebuilt health globe for performance and graphical improvement
    - Rebuilt dodge bar for performance and graphical improvement