@@ -6,6 +6,7 @@ NEW
 
 FIXES
     - Bug fixes for raidcontrol frame
+    - Destruction Warlooks: We steel the blizzard Soul shards as our classpower so you can see also soul shard fragments (temp, till we have our own graphic)
 
 5.4.1
 
